# patina

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  smoke_offline.py  smoke_walk.ps1
docs/: DESIGN.md  DRESSING_CONTRACT.md  LOOK_PIPELINE.md  MODULAR_ALIGNMENT.md  SEAMS.md
examples/: shell.gameplay.json  shell.glb
godot/: README.md
godot/addon/patina/: patina_apply.gd  patina_dock.gd  plugin.cfg  plugin.gd
godot/shaders/: README.md  ps1.gdshader
patina/: __init__.py  anchors.py  banding.py  cli.py  decals.py  depth.py  determinism.py  families.py  framing.py  gltf_io.py  manifest.py  mesh.py  nuance.py  overrides.py  palette.py  paneling.py  patterns.py  photo.py  preview.py  skins.py  slots.py  surfaces.py  templates.py  themes.py  trim.py  uvproject.py  version.py
patina/schema/: __init__.py  patina.schema.json
tests/: conftest.py  make_fixture.py  test_anchors.py  test_banding.py  test_collision_untouched.py  test_decals.py  test_depth.py  test_determinism.py  test_families.py  test_framing.py  test_gltf_roundtrip.py  test_manifest.py  test_nuance.py  test_overrides.py  test_palette.py  test_paneling.py  test_patterns.py  test_photo.py  test_preview.py  test_skins.py  test_slots.py  test_surfaces_ext.py  test_templates.py  test_themes.py  test_trim.py  test_uv_uniformity.py  test_winding.py
